[package]
name = "decoder-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.43"
chrono = "0.4.19"
cpal = "0.13.4"
futures = "0.3.17"
pitch-detection = "0.2.0"
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
serde_repr = "0.1.7"
tokio = {version = "1.11.0", features = ["full"]}
warp = "0.3.1"
